feat: cải thiện quản lý loại cá, đơn vị tính, bảng giá, nhập hàng, thanh lý và dashboard:
- bổ sung CRUD và validation đơn vị tính
- chuẩn hóa quy đổi khối lượng và chính sách giá
- cải thiện quản lý loại cá và lịch sử bảng giá
- bổ sung validation nhà cung cấp và phiếu nhập
- kiểm tra tồn kho khi thanh lý và tối ưu N+1
- tối ưu thống kê Dashboard và phân trang đơn hàng
- cập nhật frontend và tài liệu API liên quan