@@ -9,16 +9,15 @@ import com.minhquan.QuanLyVuaCa.exception.ErrorCode;
 import com.minhquan.QuanLyVuaCa.mapper.BanggiaMapper;
 import com.minhquan.QuanLyVuaCa.repository.BanggiaRepository;
 import com.minhquan.QuanLyVuaCa.repository.ChitietcabanRepository;
-import org.springframework.transaction.annotation.Transactional;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,70 +28,89 @@ public class BanggiaService {
     ChitietcabanRepository chitietcabanRepository;
     BanggiaMapper banggiaMapper;
 
-    // Lấy danh sách
     @Transactional(readOnly = true)
     public List<BanggiaResponse> getAll() {
-        return banggiaRepository.findAll().stream()
+        return banggiaRepository.findAllByNgayketthucIsNull().stream()
                 .map(this::enrichStatus)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // --- LOGIC TẠO GIÁ MỚI ---
-    @Transactional // Quan trọng: Để đảm bảo cả update cái cũ và insert cái mới cùng thành công
+    @Transactional(readOnly = true)
+    public List<BanggiaResponse> getHistory() {
+        return banggiaRepository.findAll().stream()
+                .map(this::enrichStatus)
+                .toList();
+    }
+
+    @Transactional
     public BanggiaResponse create(BanggiaRequest request) {
+        validatePrices(request.getGiabanle(), request.getGiabansi());
 
-        // 1. Tìm sản phẩm trong kho
-        Chitietcaban sp = chitietcabanRepository.findById(request.getIdchitietcaban())
+        Chitietcaban product = chitietcabanRepository.findById(request.getIdchitietcaban())
                 .orElseThrow(() -> new AppExceptions(ErrorCode.CHITIET_CABAN_NOT_EXISTED));
+        if (Boolean.TRUE.equals(product.getDeleted())) {
+            throw new AppExceptions(ErrorCode.BANGGIA_FOR_DELETED_PRODUCT);
+        }
 
-        // 2. XỬ LÝ BẢNG GIÁ CŨ (Nếu có)
-        // Tìm xem sản phẩm này có giá nào đang chạy không (ngayketthuc = null)
-        Optional<Banggia> oldPriceOpt = banggiaRepository.findByChitietcabanAndNgayketthucIsNull(sp);
-
-        if (oldPriceOpt.isPresent()) {
-            Banggia oldPrice = oldPriceOpt.get();
-
-            // Chốt ngày kết thúc cho giá cũ là "Hôm qua" 
-            // (Để giá mới bắt đầu từ "Hôm nay" không bị trùng lắp)
+        var currentPrice = banggiaRepository.findByChitietcabanAndNgayketthucIsNull(product);
+        if (currentPrice.isPresent()) {
+            Banggia oldPrice = currentPrice.get();
+            if (LocalDate.now().equals(oldPrice.getNgaybatdau())) {
+                oldPrice.setGiabanle(request.getGiabanle());
+                oldPrice.setGiabansi(request.getGiabansi());
+                return enrichStatus(banggiaRepository.save(oldPrice));
+            }
             oldPrice.setNgayketthuc(LocalDate.now().minusDays(1));
-
             banggiaRepository.save(oldPrice);
         }
 
-        // 3. TẠO BẢNG GIÁ MỚI
         Banggia newPrice = new Banggia();
-        newPrice.setChitietcaban(sp);
+        newPrice.setChitietcaban(product);
         newPrice.setGiabanle(request.getGiabanle());
         newPrice.setGiabansi(request.getGiabansi());
-
-        // Logic theo yêu cầu: Ngày bắt đầu = Hiện tại, Ngày kết thúc = Null
         newPrice.setNgaybatdau(LocalDate.now());
         newPrice.setNgayketthuc(null);
-
         return enrichStatus(banggiaRepository.save(newPrice));
     }
 
-    // Hàm phụ để hiển thị trạng thái cho đẹp
-    private BanggiaResponse enrichStatus(Banggia entity) {
-        BanggiaResponse res = banggiaMapper.toResponse(entity);
-        LocalDate now = LocalDate.now();
-
-        if (entity.getNgayketthuc() == null) {
-            // Nếu start <= now -> Đang áp dụng
-            if (!entity.getNgaybatdau().isAfter(now)) {
-                res.setTrangThai("Đang áp dụng");
-            } else {
-                res.setTrangThai("Sắp áp dụng"); // Trường hợp set cho tương lai
-            }
-        } else {
-            // Đã có ngày kết thúc -> Đã hết hạn (Lịch sử)
-            res.setTrangThai("Đã hết hạn");
+    @Transactional
+    public void delete(Integer id) {
+        Banggia price = banggiaRepository.findById(id)
+                .orElseThrow(() -> new AppExceptions(ErrorCode.BANGGIA_NOT_EXISTED));
+        if (price.getNgayketthuc() != null) {
+            return;
         }
-        return res;
+
+        LocalDate yesterday = LocalDate.now().minusDays(1);
+        price.setNgayketthuc(
+                price.getNgaybatdau() != null && price.getNgaybatdau().isAfter(yesterday)
+                        ? price.getNgaybatdau()
+                        : yesterday);
+        banggiaRepository.save(price);
     }
 
-    public void delete(Integer id) {
-        if(!banggiaRepository.existsById(id)) throw new AppExceptions(ErrorCode.BANGGIA_NOT_EXISTED);
-        banggiaRepository.deleteById(id);
+    private void validatePrices(BigDecimal retailPrice, BigDecimal wholesalePrice) {
+        if (retailPrice == null || retailPrice.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new AppExceptions(ErrorCode.GIABANLE_INVALID);
+        }
+        if (wholesalePrice == null || wholesalePrice.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new AppExceptions(ErrorCode.GIABANSI_INVALID);
+        }
+        if (wholesalePrice.compareTo(retailPrice) > 0) {
+            throw new AppExceptions(ErrorCode.BANGGIA_RELATION_INVALID);
+        }
+    }
+
+    private BanggiaResponse enrichStatus(Banggia entity) {
+        BanggiaResponse response = banggiaMapper.toResponse(entity);
+        LocalDate today = LocalDate.now();
+        if (entity.getNgayketthuc() == null) {
+            response.setTrangThai(entity.getNgaybatdau() != null && entity.getNgaybatdau().isAfter(today)
+                    ? "Sắp áp dụng"
+                    : "Đang áp dụng");
+        } else {
+            response.setTrangThai("Đã hết hạn");
+        }
+        return response;
     }
 }
